tests/typing/good/testfile-return-1.scala
class C { def foo() { print(if(true) return else 2) } }
object Main { def main(args: Array[String]) { } }
