tests/typing/bad/testfile-no_return4-1.scala
class A {
    def f() : Int = {
	while (false)
	    return 0
    }
}
object Main { def main(args: Array[String]) { } }
